# agent-studio-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/ai/agent/: agent.py
app/ai/memory/: postgres.py  supabase_chat_memory.py
app/ai/model/: anthropic.py  ollama.py  openai.py
app/ai/tools/: custom_api_tool.py  python_executor.py  weather_tool.py  web_page_scraper.py  wikipedia.py
app/api/endpoints/: agent.py  chat.py  model.py  model_provider.py  prompt.py
app/models/schemas/: agent.py  agent_prompt.py  chat.py  chat_session.py  knowledge_base.py  message.py  model.py  model_provider.py  prompt.py  tool.py
app/services/: agent_service.py  chat_service.py  knowledge_service.py  langchain_service.py  model_provider_service.py  model_service.py  prompt_service.py  supabase_service.py  tool_service.py
